// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> renders 1`] = `
<div
  className="css-1cqgl9p"
/>
`;

exports[`<ButtonGroup /> renders with children 1`] = `
<div
  className="css-1cqgl9p"
>
  <span />
</div>
`;
